# paintingCPS

./: .gitignore  README.md
Android/: README
Android/GoogleGlassCPS/: local.properties  settings.gradle
Android/GoogleGlassCPS/glass/: build.gradle
Android/GoogleGlassCPS/mobile/: build.gradle  proguard-rules.pro
Android/android_mfping/: AndroidManifest.xml  local.properties
Android/android_mfping/app/: build.gradle
Android/android_mfping/res/drawable-mdpi/: Thumbs.db
Android/android_mfping/res/layout/: activity_main.xml  activity_ping.xml
Android/android_mfping/res/values/: strings.xml
Android/hoststack-launcher/: AndroidManifest.xml  build.gradle  local.properties
Android/hoststack-launcher/assets/: mfandroidstack
Android/hoststack-launcher/res/layout/: activity_s.xml  (+1 more)
client/: CMakeLists.txt  MFPackager.cpp  MFPackager.h  Makefile  MsgDistributor.cpp  MsgDistributor.h  README  client-OpenCV.cpp  global_config.h
client/sample/: README
database/: README
database/info/: 1.txt  10.txt  100.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  (+60 more)
encryption/: AEScipher  AEScipher.c  README
jclient/: JClient.java  Makefile  MsgDistributor.java  README  TestClient.java
mf-usage/: README  android-avi.conf  android-new.conf  android.conf  dnsmasq-sb4.conf  dnsmasq.conf  hostapd.conf  hoststack1.conf  hoststack2.conf  hoststack_ah_1.conf  laptop.conf  sb4-node1-1.conf
server/: CMakeLists.txt  ImgMatch.cpp  ImgMatch.h  KafkaProducer.cpp  KafkaProducer.h  MFPackager.cpp  Makefile  Metrics.cpp  Metrics.h  MsgDistributor.cpp  MsgDistributor.h  README  global_config.h  kafka.h  server-OpenCV.cpp  server.cpp
server/pics/: README
storm/: README  StormMatch.java  TimeManager.java  pom.xml  util.sh
storm-kafka/: README  pom.xml  util.sh
storm-kafka/assist/: ClusterMonitor.java  starter
storm/assist/: FakeSpout.java  Makefile  SpoutFinder.java  TimeManager.java  TimeResponser.java  starter.cpp
storm/tmp/: README
storm/usage/: start.sh
(+27 files in other folders)
